--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,9 @@
 body {
     background: -webkit-linear-gradient(bottom left, #ccc, #fff);
 }
+#content{
+    background: url(../image/bg.png) repeat-x;
+}
 .color-red {
     color: red;
 }
