--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,4 +1,4 @@
-@import url('http://cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.css');
+@import url('../../node_modules/bootstrap/dist/css/bootstrap.css');
 body {
     background: -webkit-linear-gradient(bottom left, #ccc, #fff);
 }
