--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,1 +1,27 @@
+body {
+    scrollbar-face-color: #eef;
+    scrollbar-shadow-color: #FFFFFF;
+    scrollbar-highlight-color: #FFFFFF;
+    scrollbar-3dlight-color: #FFFFFF;
+    scrollbar-darkshadow-color: #FFFFFF;
+    scrollbar-track-color: #FFFFFF;
+    scrollbar-arrow-color: #FFFFFF;
+}
+/* Let's get this party started */
+body::-webkit-scrollbar {
+    width: 12px;
+}
 
+/* Track */
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+/* Handle */
+body::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #eee;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
